// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Deactivation /> Should render and match the snapshot 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  font-weight: bold;
  background-color: #D2371D;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  width: 180px;
}

<div>
  <button
    class="c0"
    color="warning"
    radius="100px"
    width="180"
  >
    Deactivate account
  </button>
</div>
`;

exports[`<Deactivation /> Should render and match the snapshot for inactive user 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  font-weight: bold;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  width: 180px;
}

<div>
  <button
    class="c0"
    color="primary"
    radius="100px"
    width="180"
  >
    Activate account
  </button>
</div>
`;
